# wavefront-3d-renderer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  canvas_drawing.c  canvas_drawing.h  drawing.h  ex0  gtk_drawing.c  gtk_drawing.h  gtk_gui.c  gtk_gui.h  helper.c  helper.h  main.c  makefile  minimal_index.html  model.c  model.h  models.h  render.glade  render.glade~  renderer.c  renderer.h  resources.xml  structures.h  utils.c  utils.h  wavefront_object_reader.c
docs/: index.html  index.js  index.wasm
include/: gui.h  sdl_drawing.h  sdl_wasm_gui.h  utils.h  wavefront_object_reader.h
resources/: gui.glade  gui.html  resources.xml
src/: gtk_drawing.c  gtk_gui.c  main.c  main_sdl.c  main_wasm.c  renderer.c  sdl_drawing.c  sdl_gui.c  wavefront_object_reader.c
